{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 403,
  "lineage": "6675d084-d8ce-3be5-1101-bc958c6f425b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c1554073d51e169",
            "association_id": "eipassoc-0a80a6c3ba3914910",
            "domain": "vpc",
            "id": "eipalloc-02c1554073d51e169",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05058bbf848668a5f",
            "private_dns": "ip-192-168-0-55.us-east-2.compute.internal",
            "private_ip": "192.168.0.55",
            "public_dns": "ec2-3-23-200-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.200.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:internet-gateway/igw-0a87773de3ae53e09",
            "id": "igw-0a87773de3ae53e09",
            "owner_id": "690274493847",
            "vpc_id": "vpc-0307eae523c89e787"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c1554073d51e169",
            "association_id": "eipassoc-0a80a6c3ba3914910",
            "connectivity_type": "public",
            "id": "nat-0532686a42da807a6",
            "network_interface_id": "eni-05058bbf848668a5f",
            "private_ip": "192.168.0.55",
            "public_ip": "3.23.200.210",
            "subnet_id": "subnet-0c3545213969146fa"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_subnet.publicsubnets",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:route-table/rtb-053c5e37d9cb7efed",
            "id": "rtb-053c5e37d9cb7efed",
            "owner_id": "690274493847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0532686a42da807a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0307eae523c89e787"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.publicsubnets",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:route-table/rtb-02c1af1d3eb75d01b",
            "id": "rtb-02c1af1d3eb75d01b",
            "owner_id": "690274493847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a87773de3ae53e09",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0307eae523c89e787"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86b3c1b55e5136e",
            "route_table_id": "rtb-053c5e37d9cb7efed",
            "subnet_id": "subnet-0f794b76615c1d7cb"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.publicsubnets",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1296f8a2ad641eb",
            "route_table_id": "rtb-053c5e37d9cb7efed",
            "subnet_id": "subnet-0f3d8fc6e1cc70da4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.publicsubnets",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068f016431cdab94a",
            "route_table_id": "rtb-02c1af1d3eb75d01b",
            "subnet_id": "subnet-0c3545213969146fa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.publicsubnets",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:subnet/subnet-0f794b76615c1d7cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f794b76615c1d7cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690274493847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rex-useast2-dev-private-sg",
              "kubernetes.io/cluster/rex-useast2-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rex-useast2-dev-private-sg",
              "kubernetes.io/cluster/rex-useast2-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0307eae523c89e787"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:subnet/subnet-0f3d8fc6e1cc70da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3d8fc6e1cc70da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690274493847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rex-useast2-dev-private-sg",
              "kubernetes.io/cluster/rex-useast2-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rex-useast2-dev-private-sg",
              "kubernetes.io/cluster/rex-useast2-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0307eae523c89e787"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:subnet/subnet-0c3545213969146fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3545213969146fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690274493847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Network": "Public",
              "kubernetes.io/cluster/rex-useast2-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Network": "Public",
              "kubernetes.io/cluster/rex-useast2-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0307eae523c89e787"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:690274493847:vpc/vpc-0307eae523c89e787",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d911e3bae808a749",
            "default_route_table_id": "rtb-00612fc6a24be7378",
            "default_security_group_id": "sg-0853e055c8ffbbf6e",
            "dhcp_options_id": "dopt-4654262f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0307eae523c89e787",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00612fc6a24be7378",
            "owner_id": "690274493847",
            "tags": {
              "Name": "dev-env"
            },
            "tags_all": {
              "Name": "dev-env"
            }
          }
        }
      ]
    }
  ]
}